predeploy and deploy

--- a/react-portfolio-main/package.json
+++ b/react-portfolio-main/package.json
@@ -15,7 +15,10 @@
   
     
   "build": "vite build",
+
+  "predeploy": "npm run build",
   
+  "deploy": "gh-pages -d dist",
     
   "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
   
